fixtures/e2e/todo.txt.d/lists.d/invalid/empty-body.list
---
name: Empty
icon: 📭
description: No filter conditions — should match no tasks
---
